Refactor: General refactor
Refactor:
- Close DB connections
- Fix logic errors
- Remove native arrays (change to List)
- Reformat all code
- Rename some files and classes
- Fix some dependencies
- Fix some Spring Annotation errors